# scorbot_control-

scorbot_control/: CMakeLists.txt  package.xml
scorbot_control/cfg/: scorbot_controllers.yaml
scorbot_control/include/scorbot_control/: scorbot_hw_interface.h
scorbot_control/launch/: scorbot_HW_Interface_main.launch
scorbot_control/msg/: arm_command.msg  scorbot_telemetry.msg
scorbot_control/src/: scorbot_hw_interface.cpp  scorbot_hw_main.cpp
